[FIX]: swagger configured
